<resources>
    <string name="app_name">My Travels</string>
    <string name="title_activity_choose_location">ChooseLocationActivity</string>
    <string name="title_activity_new_vacation">NewVacationActivity</string>
    <string name="title_activity_my_vacations">My Travels</string>
    <string name="title_activity_vacation_feed">VacationFeedActivity</string>
    <string name="title_activity_add_media">AddMediaActivity</string>
    <string name="title_activity_add_text">AddTextActivity</string>
    <string name="title_activity_spotify_search">SpotifySearchActivity</string>
    <string name="next">NEXT</string>
    <string name="trip_name">Name of Trip</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="upload">Save</string>
    <string name="title">Title</string>
    <string name="entry">Entry</string>
    <string name="journal_entry">Journal Entry</string>
    <string name="write_caption">Write Caption</string>
    <string name="camera_label">Choose Picture</string>
    <string name="text_label">Write Journal Entry</string>
    <string name="song_label">Add Song</string>
    <string name="edit_memory">Edit</string>
    <string name="delete_memory">Delete</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_memories">You have no memories yet</string>
</resources>
