<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    tools:context="com.example.clairescout.mytravelapp.AddTextActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/addmedia_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ToolbarColoredBackArrow"
        app:popupTheme="@style/AppTheme"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Add Journal Entry"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/edit_text_linear"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="#E8E8E8"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/upload_linear"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/memory_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:textColorHint="#A9A9A9"
            android:color="@color/colorPrimary"
            android:elevation="1dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:shadowColor="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="426dp" />

        <EditText
            android:id="@+id/memory_text"
            android:gravity="top|left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:color="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/entry"
            android:elevation="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:shadowColor="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textColorHint="#A9A9A9"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="426dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/upload_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#E8E8E8">

        <Button
            android:id="@+id/upload"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="@string/upload"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
